cabal-version: 3.6

name: rabin
version: 0.0.0.0
build-type: Simple

executable rabin
  main-is: Main.hs

  other-modules:
    Math
    KeyGen
    Rabin
    Opts

  hs-source-dirs: src

  build-depends:
    base >=4.15 && <5
    , containers ^>= 0.6.2
    , parsec ^>= 3.1.14
    , mtl ^>= 2.2.2
    , transformers ^>= 0.5.6
    , extra ^>= 1.7.10
    , random ^>= 1.2.1
    , mwc-random ^>= 0.15
    , binary ^>= 0.8.8
    , bytestring ^>= 0.10.12
    , utf8-string ^>= 1.0.2
    , split ^>= 0.2.3.4
    , optparse-generic ^>= 1.4.7
    , filepath ^>= 1.4.2

  ghc-options:
    -threaded
    -rtsopts
    -with-rtsopts=-N
    -Wall
    -Wincomplete-uni-patterns
    -Wprepositive-qualified-module
    -Wmissing-deriving-strategies
    -- -Wunused-packages
    -Wno-star-is-type

  default-extensions:
    ApplicativeDo
    BangPatterns
    BlockArguments
    ConstraintKinds
    DataKinds
    DefaultSignatures
    DeriveAnyClass
    DeriveFoldable
    DeriveFunctor
    DeriveGeneric
    DeriveLift
    DeriveTraversable
    DerivingStrategies
    EmptyCase
    ExistentialQuantification
    FlexibleContexts
    FlexibleInstances
    FunctionalDependencies
    GADTs
    GeneralizedNewtypeDeriving
    ImportQualifiedPost
    InstanceSigs
    KindSignatures
    LambdaCase
    MultiParamTypeClasses
    MultiWayIf
    NamedFieldPuns
    OverloadedStrings
    PatternSynonyms
    RankNTypes
    RecordWildCards
    RecursiveDo
    ScopedTypeVariables
    StandaloneDeriving
    TupleSections
    TypeApplications
    TypeFamilies
    TypeFamilyDependencies
    TypeOperators
    ViewPatterns

  default-language: Haskell2010
