cabal-version: 3.6

name: numeration-bases
version: 0.0.0.0
build-type: Simple

executable numeration-bases
  main-is: Main.hs

  other-modules:
    Operations
    Conversions
    Parser

  hs-source-dirs: src

  build-depends:
    base >=4.15 && <5
    , parsec ^>= 3.1.14
    , extra ^>= 1.7.10

  ghc-options:
    -threaded
    -rtsopts
    -with-rtsopts=-N
    -Wall
    -Wincomplete-uni-patterns

  default-extensions:
    TypeApplications

  default-language: Haskell2010
