cabal-version: 2.0

name: tli
version: 0.0.0.0
synopsis: Toy Language Interpreter
description: Please see the README on GitHub at <https://github.com/aionescu/tli#readme>
homepage: https://github.com/aionescu/tli#readme
bug-reports: https://github.com/aionescu/tli/issues
license: MIT
license-file: LICENSE.txt
author: Alex Ionescu
maintainer: alxi.2001@gmail.com
copyright: Copyright (C) 2020 Alex Ionescu
category: Interpreter
build-type: Simple
extra-source-files: README.md

source-repository head
  type: git
  location: https://github.com/aionescu/tli

executable tli
  main-is: Main.hs

  other-modules:
    AST
    Parser
    TypeCk
    Eval
    Opts
    Paths_tli

  autogen-modules:
    Paths_tli

  hs-source-dirs: src

  build-depends:
    base ^>=4.13
    , parsec ^>= 3.1.14
    , unordered-containers ^>= 0.2.13
    , optparse-generic ^>= 1.4.4

  ghc-options:
    -threaded
    -rtsopts
    -with-rtsopts=-N
    -Wall
    -Wincomplete-uni-patterns

  default-extensions:
    ApplicativeDo
    BangPatterns
    BlockArguments
    ConstraintKinds
    DataKinds
    DefaultSignatures
    DeriveAnyClass
    DeriveFoldable
    DeriveFunctor
    DeriveGeneric
    DeriveLift
    DeriveTraversable
    DerivingStrategies
    EmptyCase
    ExistentialQuantification
    FlexibleContexts
    FlexibleInstances
    FunctionalDependencies
    GADTs
    GeneralizedNewtypeDeriving
    InstanceSigs
    KindSignatures
    LambdaCase
    MultiParamTypeClasses
    MultiWayIf
    NamedFieldPuns
    OverloadedStrings
    PatternSynonyms
    RankNTypes
    RecordWildCards
    ScopedTypeVariables
    StandaloneDeriving
    TupleSections
    TypeApplications
    TypeFamilies
    TypeFamilyDependencies
    TypeOperators
    ViewPatterns

  default-language: Haskell2010
