cabal-version: 2.0

name: xi
version: 0.0.0.0
synopsis: The Xi Programming Language
author: Alex Ionescu
maintainer: alxi.2001@gmail.com
copyright: Copyright (C) 2021 Alex Ionescu
category: Interpreter
build-type: Simple
extra-source-files: README.md

executable xi
  main-is: Main.hs

  other-modules:
    Language.Xi.Syntax
    Language.Xi.Parser
    Language.Xi.TypeChecker
    Language.Xi.Eval
    Paths_xi

  autogen-modules:
    Paths_xi

  hs-source-dirs: src

  build-depends:
    base >=4.13 && <5
    , containers ^>= 0.6.2
    , mtl ^>= 2.2.2
    , parsec ^>= 3.1.14

  ghc-options:
    -threaded
    -rtsopts
    -with-rtsopts=-N
    -Wall
    -Wincomplete-uni-patterns

  default-extensions:
    ApplicativeDo
    BangPatterns
    BlockArguments
    ConstraintKinds
    DataKinds
    DefaultSignatures
    DeriveAnyClass
    DeriveFoldable
    DeriveFunctor
    DeriveGeneric
    DeriveLift
    DeriveTraversable
    DerivingStrategies
    EmptyCase
    ExistentialQuantification
    FlexibleContexts
    FlexibleInstances
    FunctionalDependencies
    GADTs
    GeneralizedNewtypeDeriving
    InstanceSigs
    KindSignatures
    LambdaCase
    MultiParamTypeClasses
    MultiWayIf
    NamedFieldPuns
    OverloadedStrings
    PatternSynonyms
    RankNTypes
    RecordWildCards
    RecursiveDo
    ScopedTypeVariables
    StandaloneDeriving
    TupleSections
    TypeApplications
    TypeFamilies
    TypeFamilyDependencies
    TypeOperators
    ViewPatterns

  default-language: Haskell2010
